src/main/java/org/example/grammar/Java.g4
grammar Java;
prule: creators;
creators:  seq | branch | branchRe | concur | concurRe | cond | para | loop | choice | seqSeq | repeat ;
seq: 'Seq' twoArguments;
branch: 'Branch' '(' arg_java ',' branchRe ')';
branchRe: 'BranchRe' threeArguments;
concur: 'Concur' '(' arg_java ',' concurRe ')';
concurRe: 'ConcurRe' threeArguments;
cond: 'Cond' fourArguments;
para: 'Para' fourArguments;
loop: 'Loop' fourArguments;
choice: 'Choice' fourArguments;
seqSeq: 'SeqSeq' threeArguments;
repeat: 'Repeat' fourArguments;
twoArguments : '(' arg_java ',' arg_java ')';
threeArguments : '(' arg_java ',' arg_java ',' arg_java ')';
fourArguments : '(' arg_java ',' arg_java ',' arg_java ',' arg_java ')';
function: CharArray '(' (arg_java',')*(arg_java)* ')';
arg_java:  prule | function | string |special_String;
special_String:'#'CharArray'#';
string: CharArray;
CharArray: [a-zA-Z0-9_]+ [a-zA-Z0-9_+ =!<>%?]*;
